--- a/bundles/at.bestsolution.dart.server.api/build.properties
+++ b/bundles/at.bestsolution.dart.server.api/build.properties
@@ -2,5 +2,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                libs/gson-2.3.1.jar,\
-               OSGI-INF/services/localdartserverfactory.xml
-source.. = src/
+               OSGI-INF/
+source.. = src/,\
+           src-gen/
