adjust to API changes

--- a/bundles/at.bestsolution.dart.editor.services.e4/build.properties
+++ b/bundles/at.bestsolution.dart.editor.services.e4/build.properties
@@ -1,5 +1,7 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/services/at.bestsolution.dart.editor.services.e4.DartServerCF.xml
+               OSGI-INF/services/at.bestsolution.dart.editor.services.e4.DartServerCF.xml,\
+               OSGI-INF/services/at.bestsolution.dart.editor.services.e4.RemoteFileManagerCF.xml,\
+               plugin.xml
 source.. = src/
