enable/disable editor features

--- a/bundles/at.bestsolution.dart.app/build.properties
+++ b/bundles/at.bestsolution.dart.app/build.properties
@@ -4,5 +4,6 @@ bin.includes = .,\
                css/,\
                Application.e4xmi,\
                OSGI-INF/,\
-               OSGI-INF/services/theme-dark.xml
+               OSGI-INF/services/theme-dark.xml,\
+               OSGI-INF/l10n/bundle.properties
 source.. = src/
