added behavior api

--- a/bundles/at.bestsolution.dart.editor.services/build.properties
+++ b/bundles/at.bestsolution.dart.editor.services/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                OSGI-INF/services/at.bestsolution.dart.editor.services.complete.DartProposalComputerTypeProvider.xml,\
                OSGI-INF/services/at.bestsolution.dart.editor.services.marker.DartAnnotationModelTypeProvider.xml,\
                OSGI-INF/services/at.bestsolution.dart.editor.services.search.DartSearchProviderTypeProvider.xml,\
-               OSGI-INF/services/at.bestsolution.dart.editor.services.navigation.DartNavigationProviderTypeProvider.xml
+               OSGI-INF/services/at.bestsolution.dart.editor.services.navigation.DartNavigationProviderTypeProvider.xml,\
+               OSGI-INF/services/at.bestsolution.dart.editor.services.DartBehaviorContributorTypeProvider.xml
 source.. = src/
